--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ rp-pico = "0.9"
 usb-device = "0.3"
 usbd-serial = "0.2"
 heapless = "0.9.2"
+rotary-encoder-embedded = "0.5.0"
+panic-halt = "1.0.0"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.8"
